--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
-streamlit==1.31.0
-torch==2.1.0
-torchvision==0.16.0
-Pillow==10.2.0
-numpy==1.24.3
+
+streamlit>=1.31.0
+torch>=2.4.0
+torchvision>=0.19.0
+Pillow>=10.2.0
+numpy<2.0.0
